# wazuh-cli-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  client.rs  config.rs  error.rs  interactive.rs  main.rs  models.rs  output.rs  utils.rs
src/commands/: agent.rs  config.rs  control.rs  mod.rs
